docs/version-1.7/modules/en/pages/upgrades/longhorn-components/manually-upgrade-engine.adoc
= Manually Upgrade the Longhorn Engine
:revdate: 2025-07-01
:page-revdate: {revdate}
:current-version: {page-component-version}

You can manually upgrade the Longhorn Engine using the Longhorn UI.

== Prerequisites

Always make backups before upgrading the Longhorn engine images.

Upgrade the Longhorn manager before upgrading the Longhorn engine.

== Offline Upgrade

Follow these steps if the live upgrade is not available, or if the volume is stuck in degraded state:

. Follow xref:data-integrity-recovery/disaster-recovery-volumes.adoc[the detach procedure for relevant workloads].
. Select all the volumes using batch selection. Click the batch operation button *Upgrade Engine*, and choose the engine image available in the list. It's the default engine shipped with the manager for this release.
. Resume all workloads. Any volume not part of a Kubernetes workload must be attached from the Longhorn UI.

== Live upgrade

Live upgrade is supported for upgrading from v1.7.x (< v{current-version}) or v1.6.x.

The `iSCSI` frontend does not support live upgrades.

Live upgrade should only be done with healthy volumes.

. Select the volume you want to upgrade.
. Click `Upgrade Engine` in the drop down.
. Select the engine image you want to upgrade to.
 .. Normally it's the only engine image in the list, since the UI exclude the current image from the list.
. Click OK.

During the live upgrade, the user will see double number of the replicas temporarily. After upgrade complete, the user should see the same number of the replicas as before, and the `Engine Image` field of the volume should be updated.

Notice after the live upgrade, Rancher or Kubernetes would still show the old version of image for the engine, and new version for the replicas. It's expected. The upgrade is success if you see the new version of image listed as the volume image in the Volume Detail page.

== Clean up the old image

After you've done upgrade for all the images, select `Settings/Engine Image` from Longhorn UI. Now you should able to remove the non-default image.
